# smoframework

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CMakeLists.txt  IMPLEMENT.md  Makefile  README.md  SPEC.md
cmd/smo-admin/: CMakeLists.txt  main.cpp
cmd/smo-cli/: CMakeLists.txt  intent_parser.cpp  intent_parser.hpp  main.cpp
cmd/smo-node/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  types.hpp
core/authority/: CMakeLists.txt  authority.hpp  authority_store.cpp  authority_store.hpp  enroll_server.cpp
core/bootstrap/: CMakeLists.txt  bootstrap_protocol.cpp  bootstrap_protocol.hpp  bootstrap_service.cpp  bootstrap_service.hpp  bootstrap_snapshot.cpp  bootstrap_snapshot.hpp  cbor.cpp  cbor.hpp
core/certificate/: CMakeLists.txt  certificate.cpp  certificate.hpp
core/contract/: CMakeLists.txt  contract_definition.cpp  contract_definition.hpp  contract_id.cpp  contract_id.hpp  contract_interface.hpp
core/contract/native/: fs_contracts.cpp
core/crypto/: CMakeLists.txt  fwd.hpp  hash_provider.cpp  hash_provider.hpp  impl.hpp  registry.cpp  registry.hpp  signer_context.hpp  suite.hpp
core/crypto/aead/: xchacha20_provider.cpp  xchacha20_provider.hpp
core/crypto/hash/: sha256.cpp  sha256.hpp
core/crypto/kdf/: hkdf.cpp  hkdf.hpp
core/crypto/kem/: mlkem_provider.cpp  mlkem_provider.hpp  x25519_provider.cpp  x25519_provider.hpp
core/crypto/random/: getrandom.cpp  getrandom.hpp
core/crypto/secure/: secure_compare.cpp  secure_compare.hpp  zeroize.cpp  zeroize.hpp
core/crypto/signer/: ed25519_provider.cpp  ed25519_provider.hpp  mldsa_provider.cpp  mldsa_provider.hpp
core/discovery/: CMakeLists.txt  discovery.cpp  discovery.hpp  gossip.cpp  gossip.hpp  peer_store.cpp  peer_store.hpp  seed_store.cpp  seed_store.hpp
core/enroll/: auto_enroll.cpp  auto_enroll.hpp  join_token.cpp  join_token.hpp
core/errors/: CMakeLists.txt  error.cpp  error.hpp  error_codes.md
core/fsm/: CMakeLists.txt  fsm.cpp  fsm.hpp
core/genesis/: CMakeLists.txt  bootstrap_slot.cpp  bootstrap_slot.hpp  genesis.cpp  genesis.hpp  genesis_manifest.cpp  genesis_manifest.hpp  recovery_package.cpp  recovery_package.hpp  root_session.cpp  root_session.hpp
core/governance/: CMakeLists.txt  governance.cpp  governance.hpp
core/identity/: CMakeLists.txt  identity.cpp  identity.hpp
core/intent/: intent.h
core/join/: CMakeLists.txt  join_protocol.cpp  join_protocol.hpp  join_service.cpp  join_service.hpp
core/mesh/: CMakeLists.txt  mesh_fsm.cpp  mesh_fsm.hpp  mesh_manager.cpp  mesh_manager.hpp  mesh_resolver.hpp  mesh_state.hpp
core/network/: CMakeLists.txt  dns.cpp  dns.hpp  interface.cpp  interface.hpp  nat_detect.cpp  nat_detect.hpp  packet_dispatcher.cpp  packet_dispatcher.hpp  port_check.cpp  port_check.hpp  public_ip.cpp  public_ip.hpp
core/network/bootstrap/: peer_cache.hpp  seed_resolver.hpp
core/network/sync/: membership_sync.cpp  sync_service.cpp  sync_service.hpp
core/network/tcp/: connector.hpp  listener.hpp  session.hpp
core/network/transport/: dispatcher.hpp  selector.hpp
core/network/udp/: discovery.hpp  gossip.hpp  heartbeat.hpp  heartbeat_service.cpp  heartbeat_service.hpp
core/opcode/: CMakeLists.txt  opcode.h  opcode_registry.cpp  opcode_registry.hpp
core/recovery/: CMakeLists.txt  crl.hpp  recovery_engine.cpp  recovery_engine.hpp
core/runtime/: CMakeLists.txt  action_executor.cpp  action_executor.hpp  contract_interface.hpp  contract_registry.cpp  contract_registry.hpp  dispatcher.cpp  dispatcher.hpp  event_bus.cpp  event_bus.hpp  middleware.cpp  middleware.hpp  output_manager.cpp  output_manager.hpp  plan_executor.cpp  plan_executor.hpp  runtime_bridge.cpp  runtime_bridge.hpp  runtime_context.cpp  runtime_context.hpp  runtime_kernel.cpp  runtime_kernel.hpp  runtime_request.hpp  runtime_types.hpp  service_registry.hpp  telemetry.cpp  telemetry.hpp
core/runtime/contracts/: bootstrap_contract.cpp  bootstrap_contract.hpp  echo_contract.hpp  file_contract.cpp  file_contract.hpp  governance_contract.cpp  governance_contract.hpp  join_contract.cpp  join_contract.hpp  process_contract.cpp  (+3 more)
core/session/: CMakeLists.txt  session.cpp  session.hpp
core/storage/: CMakeLists.txt  database.cpp  database.hpp  manifest_store.cpp  manifest_store.hpp  migration.cpp  migration.hpp  sqlite_store.cpp  sqlite_store.hpp  store_id.hpp
core/transport/: CMakeLists.txt  framing.cpp  framing.hpp  secure_session.cpp  secure_session.hpp  tcp_transport.cpp  tcp_transport.hpp  transport.cpp  transport.hpp
core/trust/: CMakeLists.txt  trust.cpp  trust.hpp
protocol/: CMakeLists.txt
protocol/encryption/: CMakeLists.txt  encryption.cpp
protocol/packet/: CMakeLists.txt  packet.cpp  packet.h
protocol/replay/: CMakeLists.txt  replay.cpp  replay.h
protocol/schema/: CMakeLists.txt  schema.cpp  schema.h
protocol/signing/: CMakeLists.txt  signing.cpp
providers/blake3_provider/: CMakeLists.txt  blake3_provider.cpp  blake3_provider.hpp
providers/suite1_classical/: CMakeLists.txt  suite1_classical_provider.cpp  suite1_classical_provider.hpp
providers/suite2_modern/: CMakeLists.txt  suite2_modern_provider.cpp  suite2_modern_provider.hpp
providers/suite3_purepqc/: CMakeLists.txt  suite3_purepqc_provider.cpp  suite3_purepqc_provider.hpp
runtime/: CMakeLists.txt
runtime/audit/: CMakeLists.txt
runtime/executor/: CMakeLists.txt
runtime/fsm/: CMakeLists.txt
runtime/recovery/: CMakeLists.txt
runtime/sandbox/: CMakeLists.txt
runtime/scheduler/: CMakeLists.txt
runtime/workerpool/: CMakeLists.txt
storage/: CMakeLists.txt
storage/audit_store/: CMakeLists.txt  audit_store.cpp  audit_store.h
storage/dag_store/: CMakeLists.txt  dag_store.cpp  dag_store.h
storage/node_store/: CMakeLists.txt  node_store.cpp  node_store.h
storage/session_store/: CMakeLists.txt  session_store.cpp  session_store.h
storage/trust_store/: CMakeLists.txt  trust_store.cpp  trust_store.h
tests/: CMakeLists.txt
tests/adversarial/: CMakeLists.txt
tests/chaos/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/mesh/: CMakeLists.txt
tests/replay/: CMakeLists.txt
(+124 files in other folders)
